# chat-demo

./: .gitignore  README.md
c/client/: .cproject  .project
c/client/src/: client.c
c/common/: .cproject  .project
c/common/include/: memory.h  protocol.h  wstring.h
c/common/src/: memory.c  protocol.c  wstring.c
cpp/: CMakeLists.txt  ReadMe.md  configure.ac
cpp/chat-client/: CMakeLists.txt
cpp/chat-client/include/net/: ChatClient.h  chat_client.hpp
cpp/chat-client/src/: ErrorHandler.cpp  ErrorHandler.h  PollEventHandler.h  Poller.cpp  Poller.h  PollerEventsHandler.cpp  PollerEventsHandler.h  main.cpp
cpp/chat-server/: CMakeLists.txt
cpp/chat-server/src/: main.cpp
cpp/chat-shared/: CMakeLists.txt
cpp/chat-test/: CMakeLists.txt
cpp/chat-test/__threadpool/: auto_shutdown_policies.hpp  pool_core.hpp  pool_size_policies.hpp  pool_task.hpp  pool_task_queue.hpp  thread_pool.hpp  worker_thread.hpp
cpp/chat-test/_threadpool-bak/: threadpool.hpp
cpp/chat-test/_threadpool-bak/adaptors/: pool_adeptors.hpp  task_adaptors.hpp
cpp/chat-test/_threadpool-bak/detail/: pool_core.hpp  thread_factory.hpp  worker_thread.hpp
cpp/chat-test/_threadpool-bak/policies/: auto_shutdown_policies.hpp  pool_size_policies.hpp  rejected_execution_policies.hpp  task_scheduling_policies.hpp
cpp/chat-test/include/util/: non_copyable.hpp  scope_guard.hpp  thread_factory.hpp  thread_pool.hpp
cpp/chat-test/src/: main.cpp
cpp/client/: .cproject  .project  CMakeLists.txt  cpp.client.exe.stackdump
cpp/client/src/: cpp.client.cpp  main.cpp
(+97 files in other folders)
